09/08/2004	Florian Boor <florian.boor@kernelconcepts.de>

	- main.c: Changed value passed to callback fixing exit button.

08/20/2004	Florian Boor <florian.boor@kernelconcepts.de>
	
	- callbacks.c: Improved change detection.
	- config_parser.c: Improved card reset after changes.
	- gpe-wlancfg.desktop.in: Fix to become quiet. We don't want to make 
	                          gpe-su report error messages.

08/19/2004	Florian Boor <florian.boor@kernelconcepts.de>
	- Added button to apply changes.
	- Released V 0.2.7

06/03/2004	Florian Boor <florian.boor@kernelconcepts.de>
	- Major Makefile update.
	- Released V 0.2.6

05/25/2004	Florian Boor <florian.boor@kernelconcepts.de>
	- Removed hardcoded toolbar style. 

08/26/2003	Florian Boor <florian.boor@kernelconcepts.de>

	- Added Czech translation 
	- Updated pot
	- Applied patch for .desktop translation
	- Appliad patch to correct some problems and typos in callbacks.

08/13/2003	Florian Boor <florian.boor@kernelconcepts.de>
	
	- released V 0.2.3
	- updated Makefile and removed furter obsolete files.
	- created new pot file, removed obsolete cruft.
	- Makefile is now a real gpe makefile
	- Added "default" checkbox.
	- Improved help displaying.
	
08/12/2003	Florian Boor <florian.boor@kernelconcepts.de>

	- Help for simple gui.
	- Return to basic settings.

08/10/2003	Florian Boor <florian.boor@kernelconcepts.de>

	- Major GUI layout fixes
	- Enabled UTF-8

08/08/2003	Florian Boor <florian.boor@kernelconcepts.de>

	- Created this ChangeLog
	- Some GUI updates to deal with screen size correctly.